--- a/styles.css
+++ b/styles.css
@@ -20,12 +20,30 @@
     flex-direction: column-reverse;
     margin-bottom: 50px;
 
+
 }
 
+
 .main__cup__fill {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background-color: rgb(83, 149, 220);
     /* border: 2px solid red; */
-    height: 0%;
+    flex-grow: 0;
+    /* opacity: 0; */
+    transition: height 1s ease;
+
+}
+
+.main__cup__empty {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* border: 2px solid red; */
+    flex-grow: 1;
+    /* opacity: 0; */
+    transition: height 1s ease;
 
 }
 
@@ -57,6 +75,10 @@
 
 .cups .cup:hover {
     cursor: pointer;
+}
+
+.cups .cup.active {
+    background-color: rgb(83, 149, 220);
 }
 
 .cups .cup:nth-last-child(1) {
